<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<groupId>com.mgustran</groupId>
	<artifactId>home-assistant-rest-client</artifactId>
	<version>0.0.4</version>


	<name>home-assistant-rest-client</name>
	<description>Home Assistant Rest API Java Client Library for communication with HA instance</description>
	<url>https://github.com/mgustran/home-assistant-rest-client.git</url>


	<licenses>
		<license>
			<name>MIT License, Version 2.0</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>mgustran</id>
			<name>Miquel Gustran</name>
			<email>mgustran@gmail.com</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<developerConnection>scm:git:ssh://github.com/mgustran/home-assistant-rest-client.git</developerConnection>
		<connection>${project.scm.developerConnection}</connection>
		<url>${project.url}</url>
	</scm>


	<properties>
<!--		<java.version>11</java.version>-->
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>

		<sonar.projectKey>mgustran-lib-home-assistant-api-client</sonar.projectKey>
		<version.plugin.javadoc>3.4.1</version.plugin.javadoc>
		<version.plugin.source>3.2.1</version.plugin.source>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.0-rc1</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.14.0-rc1</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.9.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${version.plugin.source}</version>
<!--				<version>3.1.0</version>-->
				<executions>
					<execution>
						<id>attach-source</id>
						<phase>compile</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${version.plugin.javadoc}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>


	</build>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

<!--	<distributionManagement>-->
<!--        <repository>-->
<!--            <id>nexus</id>-->
<!--            <name>Releases</name>-->
<!--            <url>https://dev.domotich.es/nexus/repository/maven-releases</url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>nexus</id>-->
<!--            <name>Snapshot</name>-->
<!--            <url>https://dev.domotich.es/nexus/repository/maven-snapshots</url>-->
<!--        </snapshotRepository>-->
<!--    </distributionManagement>-->

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>


</project>
